# hawk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASES.md
src/: app_config.rs  aws_lambda.rs  image_upload_operations.rs  lib.rs  main.rs  user_data.rs
tests/resources/: test.txt
