[package]
name = "hawk"
version ="0.1.0"
authors = ["ayushprashar ayush.prashar@knoldus.in"]
edition = "2018"

[dependencies]
rust-s3 = "0.11.0"
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "0.6.0"
log = "0.4.6"
colored = "1.7"
futures = "0.1"
reqwest = "0.9.9"
kafka = { version = "0.7", default-features = false}
